# NLP_assignment

./: .gitignore  .gitmodules  analyze_dataset.py  clean_dataset.py  generate_submission.py  main.py  make_slide_figures.py  notebook.ipynb  pyproject.toml  report.md  results_and_ablation.ipynb  results_and_ablation_clean.ipynb  results_and_ablation_final.ipynb  run_ablation_addition_matrix.sh  run_all_model_soups.sh  run_experiments.py  run_light_sweep.sh  run_model_soups_clean.sh  run_model_soups_v2.sh  run_models.sh  run_reddit_backbone_sweeps.sh  run_restart_sweep.sh  run_three_gpu_lr_sweep.sh  run_two_gpu_lr_sweep.sh  run_v2_v5_top10_ensemble_search.sh
outputs/: ablation_summary.json  best_ensemble_config.json  bilstm_crf_log.json  deberta_baseline_log.json  deberta_combined_log.json  deberta_crf_difflr_log.json  deberta_crf_log.json  deberta_crf_multitask_log.json  deberta_definition_log.json  deberta_focal_log.json  deberta_multitask_definition_log.json  deberta_multitask_log.json  deberta_multitask_synthetic_log.json  deberta_synthetic_curriculum_log.json  fgm03_swa_s123_log.json  fgm05_swa_s123_log.json  fgm05_swa_s42_log.json  fgm1_swa_s123_log.json  fgm_swa_s123_log.json  fgm_swa_s42_log.json  gliner_results.json  rdrop_a05_s123_log.json  rdrop_a1_lr2e5_s123_log.json  rdrop_a1_s123_log.json  rdrop_a1_s42_log.json  recall_boost_ow02_log.json  recall_boost_s123_log.json  recall_boost_s42_log.json  recall_boost_s456_log.json  recall_ow015_s42_log.json  recall_ow01_s123_log.json  recall_ow025_lr2e5_s123_log.json  recall_ow02_lr1e5_e20_log.json  (+4 more)
slides/: README.md  (+2 more)
(+26 files in other folders)
